fix: UI_scrollbar: remove scrollbar-gutter

--- a/UI.css
+++ b/UI.css
@@ -590,7 +590,6 @@ a.UI_angle-up::after, .UI_button.UI_angle-up::after {
 }
 
 .UI_scrollbar {
-    scrollbar-gutter: stable;
     scrollbar-width: auto;
     scrollbar-color: var(--UI_scrollbar-thumb-bg-color) var(--UI_scrollbar-track-bg-color);
 }
